# faro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
agents/devbench/: SKILL.md  mcp.json
agents/faro/: SKILL.md  mcp.json
crates/app/: Cargo.toml
crates/app/src/: cli.rs  config.rs  main.rs  mcp.rs  query.rs  services.rs  tui.rs
crates/app/src/cli/: capture.rs  commands.rs  options.rs  output.rs  store.rs  tests.rs
crates/app/src/cli/commands/: data.rs  db.rs  replay.rs  requests.rs  sessions.rs  sql.rs
crates/app/src/config/: defaults.rs  raw.rs
crates/app/src/mcp/: schema.rs  security.rs  tests.rs  tool_handlers.rs
crates/app/src/mcp/tool_handlers/: browser.rs  capture.rs  data.rs  helpers.rs  maintenance.rs  requests.rs  sessions.rs
crates/app/src/query/: console.rs  pattern.rs  request_filter.rs  routes.rs  rows.rs  tui.rs  websockets.rs
crates/app/src/services/: body.rs  curl.rs  replay.rs  requests.rs  sessions.rs
crates/app/src/tui/: detail_loader.rs  editor.rs  editor_actions.rs  input.rs  layout.rs  live_refresh.rs  mouse.rs  render.rs  replay_actions.rs  script_templates.rs  scripts.rs  session_actions.rs  share_actions.rs  sql_editor.rs  state.rs  util.rs
crates/app/src/tui/input/: modes.rs  normal.rs  palette.rs
crates/app/src/tui/render/: chrome.rs  console.rs  console_lines.rs  data.rs  detail.rs  modals.rs  perf.rs  request_format.rs  requests.rs  scripts.rs  style.rs  tests.rs  websockets.rs  window.rs  workspace.rs
crates/app/src/tui/render/detail/: body.rs  content.rs  replay.rs  syntax.rs  tabs.rs
crates/app/src/tui/render/detail/body/: image.rs  sse.rs
crates/app/src/tui/render/detail/replay/: history.rs
crates/app/src/tui/render/detail/syntax/: css.rs  html.rs  javascript.rs  json.rs
crates/app/src/tui/render/modals/: help.rs  palette.rs  sessions.rs  sql.rs
crates/app/src/tui/scripts/: runtime.rs
crates/app/src/tui/state/: body.rs  chrome.rs  data.rs  detail.rs  lifecycle.rs  palette.rs  requests.rs  routes.rs  scripts.rs  streams.rs  types.rs
crates/app/src/tui/state/chrome/: navigation.rs  sessions.rs  sql.rs
crates/app/src/tui/state/palette/: catalog.rs  presets.rs
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs
crates/cdp/: Cargo.toml
crates/cdp/src/: browser.rs  capture.rs  commands.rs  events.rs  lib.rs  protocol.rs
crates/cdp/src/capture/: ingest.rs  persistence.rs  setup.rs  spawn.rs  wire.rs
crates/core/: Cargo.toml
crates/core/src/: console.rs  cookies.rs  events.rs  lib.rs  network.rs  page.rs  replay.rs  session.rs  storage.rs  websocket.rs
crates/store/: Cargo.toml
crates/store/src/: cookies.rs  lib.rs  models.rs  network.rs  rows.rs  schema.rs  scripts.rs  sessions.rs  sql.rs  storage.rs  tests.rs
scripts/: perf-smoke.sh
