[workspace]
members = [
    "crates/app",
    "crates/capture",
    "crates/cdp",
    "crates/core",
    "crates/store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/nullslate/faro"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.29"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = "0.26"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
