[package]
name = "devbench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
devbench-capture = { path = "../capture" }
devbench-cdp = { path = "../cdp" }
devbench-core = { path = "../core" }
devbench-store = { path = "../store" }
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
