[package]
name = "faro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
faro-capture = { path = "../capture" }
faro-cdp = { path = "../cdp" }
faro-core = { path = "../core" }
faro-store = { path = "../store" }
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
