[package]
name = "devbench-cdp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
devbench-capture = { path = "../capture" }
devbench-core = { path = "../core" }
devbench-store = { path = "../store" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
